--- a/app.yaml
+++ b/app.yaml
@@ -4,22 +4,28 @@ runtime: python
 api_version: 1
 
 handlers:
-- url: /stylesheets
-  static_dir: stylesheets
+- url: /controllers
+  static_dir: controllers
+  
+- url: /models
+  static_dir: models
+  
+- url: /views
+  static_dir: views
   
 # Index page and post request handle by main.py
 - url: /
-  script: main.py
+  script: controllers/main.py
   
-- url: /index\.html
-  script: main.py
+- url: /index.*
+  script: controllers/main.py
   
 - url: /(post|register)
-  script: main.py
+  script: controllers/main.py
   
 # Account Setting page and post config request handle by account_settings.py
 - url: /account_settings
-  script: account_settings/account_settings.py
+  script: controllers/account_settings.py
   
 - url: /account_settings/post
-  script: account_settings/account_settings.py
+  script: controllers/account_settings.py
