--- a/index.yaml
+++ b/index.yaml
@@ -10,14 +10,14 @@ indexes:
 # automatically uploaded to the admin console when you next deploy
 # your application using appcfg.py.
 
-# Used once in query history.
+# Unused in query history -- copied from input.
 - kind: Message
   properties:
   - name: author
   - name: date
     direction: desc
 
-# Used 2 times in query history.
+# Used 11 times in query history.
 - kind: Message
   properties:
   - name: date
