On nettoie le code (amélioration de certains passages tels que la recherche d'un utilisateur pour l'ajout à sa base d'amis), on met des commentaires un peu partout ^^, et comme on ne déploie pas on se permet de mettre la classe MainPage sur / et de faire de la classe Maintenance une classe 'qui pourrait resservir'.

--- a/app.yaml
+++ b/app.yaml
@@ -11,12 +11,12 @@ handlers:
 - url: /
   script: main.py
   
-#- url: /(post|register)
-#  script: main.py
+- url: /(post|register)
+  script: main.py
   
 # Account Setting page and post config requests handle by account_settings.py
-#- url: /account_settings
-#  script: account_settings.py
+- url: /account_settings
+  script: account_settings.py
   
-#- url: /account_settings/post
-#  script: account_settings.py
+- url: /account_settings/post
+  script: account_settings.py
