--- a/app.yaml
+++ b/app.yaml
@@ -21,5 +21,5 @@ handlers:
 - url: /account_settings/post
   script: account_settings.py
   
-- url: /research
-  script: research.py
+- url: /search
+  script: search.py
