La recherche rend l'utilisateur demandé à la casse près; donc mise en place d'une page de profil par utilisateur. (histoire que la recherche serve à quelque chose...) Ce qui induit plein de lien vers la page du profil à chaque fois qu'on voit un nom d'utilisateur... Le style de la page en question sera à revoir.

--- a/app.yaml
+++ b/app.yaml
@@ -21,5 +21,10 @@ handlers:
 - url: /account_settings/post
   script: account_settings.py
   
+# Search results page and profil page
 - url: /search
   script: search.py
+  
+- url: /profil/.*
+  script: profil.py
+  
