--- a/app.yaml
+++ b/app.yaml
@@ -11,7 +11,7 @@ handlers:
 - url: /
   script: main.py
   
-- url: /(post|register)
+- url: /(post|register|compose)
   script: main.py
   
 # Account Setting page and post config requests handle by account_settings.py
