Fixed favicon. Added basic Last.fm authorisation and API interface. Added image upload capacity.

--- a/app.yaml
+++ b/app.yaml
@@ -10,6 +10,10 @@ handlers:
 - url: /images
   static_dir: public/images
 
+- url: /favicon.ico
+  static_files: public/images/favicon.ico
+  upload: public/images/favicon.ico
+  
 - url: /admin.*
   script: index.py
   login: admin
