--- a/app.yaml
+++ b/app.yaml
@@ -9,10 +9,24 @@ handlers:
   
 - url: /images
   static_dir: public/images
+  
+- url: /scripts
+  static_dir: public/js
+
+- url: /swiff
+  static_dir: public/swf
 
 - url: /favicon.ico
   static_files: public/images/favicon.ico
   upload: public/images/favicon.ico
+
+- url: /rpc_relay.html
+  static_files: public/rpc_relay.html
+  upload: public/rpc_relay.html
+
+- url: /canvas.html
+  static_files: public/canvas.html
+  upload: public/canvas.html
   
 - url: /admin.*
   script: index.py
